force-app/application/package/main/objects/Case/fields/Account_General_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_General_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Populates itself based on the content of the field Description in the related Account.</inlineHelpText>
    <label>Account Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>