force-app/application/package/main/objects/Case/fields/Original_Creation_Date_NRC__c.field-meta.xml
<CustomField>
    <fullName>Original_Creation_Date_NRC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Creation Date (NRC)</label>
    <type>Date</type>
</CustomField>